[tool.poetry]
name = "discordbot"
version = "1.3.0"
description = "A bot for discord, its a costom server bot"
authors = ["Akashdeep akashdeep1k@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.0"
pyowm = "^3.2.0"
Flask = "^2.0.1"
folium = "^0.12.1"
"discord.pyc" = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
